# scribe

./: .gitignore  CHANGELOG.md  FAQ.md  OVERNIGHT_REPORT.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  gpu-spike.yml  release.yml
app/: README.md  eslint.config.js  index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  PillApp.tsx  backend.ts  pill.css  types.ts
app/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json  tauri.dev-flavor.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/migrations/: 001_initial.sql  004_note_analysis.sql
app/src-tauri/src/: app_state.rs  audio.rs  commands.rs  db.rs  dictation.rs  dictation_cleanup.rs  dictation_state.rs  error.rs  export.rs  file_transcribe.rs  filler.rs  github_backup.rs  github_oauth.rs  google_drive.rs  gpu.rs  hotkeys.rs  import.rs  incremental.rs  lib.rs  model_manager.rs  models.rs  note_analysis.rs  note_sync.rs  output.rs  output_uia.rs  selection_transform.rs  settings.rs  state_server.rs  stats.rs  status_file.rs  sync_history.rs  text_replace.rs  transcript.rs  tray.rs  update_check.rs  whisper.rs  whisper_server.rs
app/src/components/: UpdateOverlay.tsx  feedback.tsx  layout.tsx  modal.css  modal.tsx  primitives.tsx  transcript.tsx  update-overlay.css
app/src/lib/: customTheme.ts  format.ts  syncActivity.test.ts  syncActivity.ts  updates.ts
app/src/views/: About.tsx  Audio.tsx  Dashboard.tsx  DataPrivacy.tsx  Developer.tsx  History.tsx  Hotkeys.tsx  Models.tsx  Settings.tsx  Stats.tsx  Sync.test.tsx  Sync.tsx  Themes.tsx  Transcribe.tsx  about.css  dataprivacy.css  history.css  hotkeys.css  sync.css  transcribe.css
cli/: Cargo.toml  README.md
cli/src/: client.rs  config.rs  discovery.rs  lib.rs  liveness.rs  main.rs  output.rs  snapshot.rs
cli/tests/: integration.rs
cli/tests/support/: mod.rs
docs/: AGENT_ORCHESTRATION.md  COMPETITIVE-ANALYSIS.md  EXPERIMENT_UIA_INSERT.md  FILLER_SUPPRESSION_PLAN.md  FRONTEND_UX_REFINEMENT_PLAN.md  GOOGLE_INTEGRATION_PLAN.md  GPU_SPIKE_OVERNIGHT_REPORT.md  GPU_VULKAN_BUILD_PLAN.md  GPU_VULKAN_SPIKE.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  REWORK_PLAN.md  STATUS_AND_NEXT_STEPS.md  UX_REFINEMENT_BACKLOG.md  V1_WINDOWS_QA_CHECKLIST.md
docs/integrations/: dictation-state-contract.md  dictation-state-interface.md
integrations/mcp-server/: CONTRACT.md  README.md  package-lock.json  package.json  tsconfig.json
integrations/mcp-server/scripts/: smoke.ts
integrations/mcp-server/src/: config.ts  discovery.ts  engine.ts  http.ts  index.ts  server.ts  types.ts
integrations/mcp-server/test/: discovery.test.ts  engine.test.ts  helpers.ts  mcp.test.ts  mock-server.ts
