[package]
name = "app"
version = "0.1.0"
description = "Private local dictation for Windows."
authors = ["Nat Atkins"]
license = "UNLICENSED"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
crossbeam-channel = "0.5"
hound = "3.5"
rubato = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha1 = "0.10"
arboard = "3.4"

[target.'cfg(windows)'.dependencies]
cpal = "0.15"
windows = { version = "0.58", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
] }
