[package]
name = "app"
version = "0.5.22"
description = "Private local dictation for Windows."
authors = ["Nat Atkins"]
license = "MIT"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
crossbeam-channel = "0.5"
hound = "3.5"
rubato = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "multipart"] }
sha1 = "0.10"
sha2 = "0.10"
arboard = "3.4"
base64 = "0.22"
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(windows)'.dependencies]
cpal = "0.15"
# Native folder picker for choosing the data directory. Windows-only (the app
# ships for Windows); the picker command errors elsewhere. xdg-portal feature
# disabled so no GTK/portal system libs are pulled in.
rfd = { version = "0.15", default-features = false }
windows = { version = "0.58", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Media_Audio",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
